# bitdict

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  postcreate.sh  pre-push-hooks.sh
.github/: copilot-instructions.md
.github/instructions/: architect-reviewer.md.instructions.md  python-pro.instructions.md
.github/workflows/: python-package.yml
bitdict/: __init__.py  bitdict.py  factory.py  markdown.py  validation.py
tests/: test_bitdict.py  test_cases.py  test_markdown.py  test_validation.py
