[project]
name = "bitdict"
version = "0.0.1"
authors = [
  { name="Your Name", email="your_email@example.com" },
]
description = "A small example package that demonstrates a dictionary implementation."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"