[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "bitdict"
version = "1.1.0"
requires-python = ">= 3.10"
description = "BitDict is a Python library for creating custom bit-packed data structures with dynamically defined substructures."
authors = [{ name = "Shaped Sundew", email = "shapedsundew9@gmail.com" }]
readme = "README.md"
keywords = ["bitstruct", "bitfield", "bitpacked"]
classifiers = [
  "Development Status :: 5 - Production/Stable",  # Updated status
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13"
]


[project.urls]
Homepage = "https://github.com/Shapedsundew9/bitdict"
Documentation = "https://github.com/Shapedsundew9/bitdict/blob/main/README.md"
Repository = "https://github.com/Shapedsundew9/bitdict"
Issues = "https://github.com/Shapedsundew9/bitdict/issues"
Changelog = "https://github.com/Shapedsundew9/bitdict/blob/main/CHANGELOG.md"


[tool.pyright]
# These settings will apply to Pylance in VS Code and the pre-commit hook.
exclude = [
    "**/__pycache__",
    "**/.pytest_cache",
]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUnnecessaryIsInstance = "none"

[tool.pylint.messages-control]
disable = [
    "W2301", # Unnecessary use of ellipsis - for readability
    "W0107", # Unnecessary pass statement - for readability
    "R0903", # Too few public methods - design choice
]